alignment fix and price update

--- a/components/Carousel/Carousel.module.css
+++ b/components/Carousel/Carousel.module.css
@@ -1,6 +1,6 @@
 .carouselCaption {
   left: 15%;
-  top: 20%;;
+  top: 20%;
   text-align: left;
 }
 
@@ -21,7 +21,6 @@
   right: 15%;
   top: 15%;
   width: 36%;
-
 }
 
 .carouselLink:hover {
@@ -40,11 +39,11 @@
   z-index: 10;
   font-size: 20px;
 }
-.haveaccount{
+.haveaccount {
   color: #7b6b5b;
-  font-size: 13px;  
+  font-size: 13px;
   text-align: center;
-  padding:0px;
+  padding: 0px;
 }
 .createButton {
   background-color: #7b6b5b;
@@ -54,71 +53,68 @@
   font-size: 12px;
 }
 
-.createButton:hover{
+.createButton:hover {
   background-color: #8f7c69;
-  border-color: #7b6b5b; 
+  border-color: #7b6b5b;
 }
 .inputnav1 {
   outline: 0;
   border-width: 1 1 1.5px;
-  border-color: #ad9984; 
+  border-color: #ad9984;
   height: 35px;
-  width:250px;   
+  width: 250px;
   font-size: 12px;
-  justify-content: center;   
+  justify-content: center;
 }
 
-.label{
+.label {
   color: #7b6b5b;
-  font-size: 12px;  
+  font-size: 12px;
   width: 200px;
 }
-.carouselWrapper{
+.carouselWrapper {
   height: 500px;
-  
-  }
+}
 
 @media screen and (max-width: 1030px) {
-
-  .carouselWrapper{
+  .carouselWrapper {
     height: 175px;
     width: 320px;
-    }
+  }
   .carouselImage {
     position: absolute;
     right: 8%;
-    top: 10%;
+    top: 40px;
     width: 36%;
-  
   }
   .carouselCaption {
     left: 15%;
     top: 1%;
     text-align: left;
   }
-  
+
   .carouselCaption h3 {
     font-size: 30px;
     color: #7b6b5b;
     margin-bottom: 10px;
     font-weight: bold;
   }
-  
+
   .carouselCaption p {
     color: #7b6b5b;
     font-size: 10px;
     top: 1%;
   }
-  .label{
+  .label {
     color: #7b6b5b;
-    font-size: 12px;  
+    font-size: 12px;
     width: 100px;
   }
 
   .carouselLink {
     /* box-shadow: 5px 10px 18px #888888; */
     position: absolute;
-    top:80%;
+    top: 80%;
     left: 15%;
     background-color: #7b6b5b;
     color: #ffffff;
