--- a/components/NavMenu.module.css
+++ b/components/NavMenu.module.css
@@ -224,6 +224,7 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
+    align-items: flex-start !important;
   }
   .container {
     width: 50%;
